Create and update image file

--- a/ASPWebApplication/ASPWebApplication.csproj
+++ b/ASPWebApplication/ASPWebApplication.csproj
@@ -15,6 +15,11 @@
 	</PackageReference>
 	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
+	<PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
 </Project>
