--- a/.gitignore
+++ b/.gitignore
@@ -397,5 +397,5 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-#Appsettings.json
+# Ignore appsettings.Development.json in the .ASPWebApplication folder
 .ASPWebApplication/appsettings.Development.json
